--- a/index.html
+++ b/index.html
@@ -12,8 +12,17 @@
 <script type="text/javascript" src="js/tree.js"></script>
 <script type="text/javascript">
     $('#vladik').jsTree({
-        debug: true
+//        debug: true,
+        events: {
+            onEdit: function () {
+                alert('edit');
+            },
+            onDelete: function () {
+                alert('delete');
+            }
+        }
     });
+
 </script>
 </body>
 </html>
